<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android">
    <com.android.internal.widget.multiwaveview.MultiWaveView android:id="@id/incomingCallWidget" android:background="@android:color/black" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="-46.0dip" android:layout_alignParentBottom="true" prvandroid:targetDescriptions="@array/incoming_call_widget_3way_target_descriptions" prvandroid:directionDescriptions="@array/incoming_call_widget_3way_direction_descriptions" prvandroid:targetDrawables="@array/incoming_call_widget_3way_targets" prvandroid:handleDrawable="@drawable/ic_in_call_touch_handle" prvandroid:leftChevronDrawable="@android:drawable/ic_lockscreen_chevron_left" prvandroid:rightChevronDrawable="@android:drawable/ic_lockscreen_chevron_right" prvandroid:waveDrawable="@android:drawable/ic_lockscreen_outerring" prvandroid:outerRadius="@android:dimen/multiwaveview_target_placement_radius" prvandroid:hitRadius="@android:dimen/multiwaveview_hit_radius" prvandroid:vibrationDuration="20" prvandroid:snapMargin="@android:dimen/multiwaveview_snap_margin" prvandroid:feedbackCount="3" prvandroid:verticalOffset="20.0dip" prvandroid:horizontalOffset="0.0dip" />
    <RelativeLayout android:id="@id/inCallControls" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <ViewStub android:id="@id/dtmf_twelve_key_dialer_stub" android:layout="@layout/dtmf_twelve_key_dialer_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/dialpad_vertical_margin" android:layout_above="@id/bottomButtons" />
        <LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <FrameLayout android:id="@id/extraButtonRow" android:background="@drawable/dialpad_background_opaque" android:paddingLeft="@dimen/button_cluster_side_padding" android:paddingRight="@dimen/button_cluster_side_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:id="@id/manageConferenceButton" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageButton android:id="@id/manageConferenceButtonImage" android:clickable="false" android:src="@drawable/ic_groups_holo_dark" android:contentDescription="@string/onscreenManageConferenceText" style="@style/InCallButton" />
                    <TextView android:id="@id/manageConferenceButtonLabel" android:text="@string/onscreenManageConferenceText" style="@style/InCallExtraRowButtonLabel" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/cdmaMergeButton" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageButton android:id="@id/cdmaMergeButtonImage" android:clickable="false" android:src="@drawable/ic_merge_holo_dark" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
                    <TextView android:id="@id/cdmaMergeButtonLabel" android:text="@string/onscreenMergeCallsText" style="@style/InCallExtraRowButtonLabel" />
                </LinearLayout>
            </FrameLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/end_call_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageButton android:id="@id/endButton" android:layout_width="fill_parent" android:src="@drawable/ic_end_call" android:contentDescription="@string/onscreenEndCallText" style="@style/InCallEndButton" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/dialpad_background" android:paddingLeft="@dimen/button_cluster_side_padding" android:paddingRight="@dimen/button_cluster_side_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/dialpadButton" android:background="@drawable/btn_compound_dialpad" android:contentDescription="@string/onscreenShowDialpadText" style="@style/InCallCompoundButton" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/audioButton" android:background="@drawable/btn_compound_audio" android:contentDescription="@string/onscreenAudioText" style="@style/InCallCompoundButton" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/muteButton" android:background="@drawable/btn_compound_mute" android:contentDescription="@string/onscreenMuteText" style="@style/InCallCompoundButton" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/holdButton" android:background="@drawable/btn_compound_hold" android:contentDescription="@string/onscreenHoldText" style="@style/InCallCompoundButton" />
                <ImageButton android:id="@id/swapButton" android:src="@drawable/ic_incall_switch_holo_dark" android:contentDescription="@string/onscreenSwapCallsText" style="@style/InCallButton" />
                <View android:id="@id/holdSwapSpacer" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <ImageButton android:id="@id/addButton" android:src="@drawable/ic_add_contact_holo_dark" android:contentDescription="@string/onscreenAddCallText" style="@style/InCallButton" />
                <ImageButton android:id="@id/mergeButton" android:src="@drawable/ic_merge_holo_dark" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
